--- a/ProjetCovoiturage/ProjetCovoiturage/ProjetCovoiturage.csproj
+++ b/ProjetCovoiturage/ProjetCovoiturage/ProjetCovoiturage.csproj
@@ -205,6 +205,7 @@
     <Compile Include="Models\Client.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Trajetcs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
